[metadata]
name = mysql-x-protocol-test
summary = MySQL X Protocol test
description-file =
    README.md
author = yamamo-i
classifier =
    Environment :: yamamo-i
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7.1

[files]
packages =
    x-protocol-test

